# driver

./: .gitignore  .pre-commit-config.yaml  CMakeLists.txt  README.md  host-commands.md
.github/workflows/: ci.yml  release.yml
adapters/: activates.ini  default_ini.h.in  hwid_table.ini  main.cpp  okhsl.hpp  osc_receiver.cpp  osc_receiver.hpp  rawlog_source.c  rawlog_source.h  sinew_driver.h  sinew_serial_host.c
blender/: 01_osc_listener.py  02_arrows.py
capture/: cut_time_window.py  cut_windows.py  detect_calib.py  hostcap_to_rawlog.py
core/: hwid_table.c  hwid_table.h  mag_calib.c  mag_calib.h  nonic.h  sinew_osc.c  sinew_osc.h  sinew_protocol.c  sinew_protocol.h  triad_calib.c  triad_calib.h
core/spec/: Tests.lean  lake-manifest.json  lakefile.lean
core/spec/Sinew/: Nonic.lean  Osc.lean  Protocol.lean  Serial.lean  Udp.lean
core/spec/Sinew/Protocol/: Channels.lean  HostCommands.lean  Lifecycle.lean  Spec.lean  Type0x18.lean  Type0x3a.lean
ports/: command_sink.h  frame_source.h  sibling-repos.txt  tracker_sink.h  tracker_source.h
tests/: proptest.cpp  test_frame_source.c
